--- a/src/assets/styles/App.css
+++ b/src/assets/styles/App.css
@@ -1,6 +1,8 @@
 #root {
   max-width: 100%;
   min-width: 550px;
+  height: 100%;
+  background-color: aqua;
   margin: 0 ;
   padding: 0;
   text-align: center;
