--- a/src/assets/styles/index.css
+++ b/src/assets/styles/index.css
@@ -25,3 +25,13 @@ h1 {
   line-height: 1.1;
 }
 
+/* LOADER */
+.app-spinner {
+  display: inline-block;
+  width: 50px;
+  height: 50px;
+  margin-right: 10px;
+  position: absolute;
+  top: 45%;
+  left: 50%;
+}
