created invidual product page and edit move

--- a/src/assets/styles/App.css
+++ b/src/assets/styles/App.css
@@ -2,8 +2,12 @@
   max-width: 100%;
   min-width: 550px;
   height: 100%;
-  background-color: aqua;
   margin: 0 ;
   padding: 0;
-  text-align: center;
+}
+
+.selectSort{
+  width: 100%;
+  text-align: right;
+  margin: 1% -10px 1%;
 }
